tarpc/tests/compile_fail/no_serde1/no_implicit_serde_without_feature.rs
#[tarpc::service]
trait Foo {
    async fn foo();
}

fn main() {
    let x = FooRequest::Foo {};
    x.serialize();
}
